--- a/workflows/example.workflow.yml
+++ b/workflows/example.workflow.yml
@@ -5,7 +5,7 @@ description: "This workflow displays table values in various formats. ** Note: R
 tasks:
   - name: intervals
     type: execute_sql
-    database: primary_database
+    database: local
     sql_query: |
       SELECT
         'Daily' AS interval
